added better text

--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -6,5 +6,10 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <p>On Food Tinder you can:</p>
+    <ul class="list-group">
+        <li class="list-group-item">Find recipes you might like</li>
+        <li class="list-group-item">Connect with friends</li>
+        <li class="list-group-item">Find out which recipes you have in common</li>
+    </ul>
 </div>
