added api called logic
does not work on delplyed version yet, may break it

--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -12,5 +12,5 @@
         <li class="list-group-item">Connect with friends</li>
         <li class="list-group-item">Find out which recipes you have in common</li>
     </ul>
-    <p>To follow development of the Food Tinder check out the <a href="https://github.com/tropaadigselv/Food-Tinder">git repository</a></p>
+    <p>To follow development of Food Tinder check out the <a href="https://github.com/tropaadigselv/Food-Tinder">git repository</a></p>
 </div>
